# app/Data/Student/OpenCourseRegisteration/GetStudentRegisteredOpenCourses/Response/CourseItemData.php
@@ -1,23 +1,22 @@
 <?php
 
-namespace App\Data\Student\OpenCourseRegisteration\GetCoursesMarks\Respone;
+namespace App\Data\Student\OpenCourseRegisteration\GetStudentRegisteredOpenCourses\Response;
 
 use OpenApi\Attributes as OAT;
 use Spatie\LaravelData\Data;
 use Spatie\TypeScriptTransformer\Attributes\TypeScript;
 
 #[TypeScript]
-#[Oat\Schema(schema: 'GetCoursesMarksCourseItemData')]
+#[Oat\Schema(schema: 'GetStudentRegisteredOpenCoursesCourseItemData')]
 class CourseItemData extends Data
 {
     public function __construct(
-        #[OAT\Property]
         public int $id,
         #[OAT\Property]
         public string $name,
         #[OAT\Property]
         public string $code,
         #[OAT\Property]
-        public int $credits
+        public int $credits,
     ) {}
 }
