# app/Data/Student/OpenCourseRegisteration/GetStudentRegisteredOpenCourses/Response/GetStudentRegisteredOpenCoursesResponseData.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Data\Student\OpenCourseRegisteration\GetStudentRegisteredOpenCourses\Response;
+
+use App\Data\Shared\Swagger\Property\DateProperty;
+use OpenApi\Attributes as OAT;
+use Spatie\LaravelData\Data;
+use Spatie\TypeScriptTransformer\Attributes\TypeScript;
+
+#[TypeScript]
+#[Oat\Schema()]
+class GetStudentRegisteredOpenCoursesResponseData extends Data
+{
+    public function __construct(
+        #[OAT\Property]
+        public int $id,
+        #[OAT\Property]
+        public int $year,
+        #[OAT\Property]
+        public int $semester,
+        #[DateProperty]
+        public string $created_at,
+        #[OAT\Property]
+        public CourseItemData $course,
+
+    ) {}
+}
